添加数据库配置项

--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 ENVIRONMENT=prod
 COMMAND_START=["", "."]
 PORT=12723
+
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=123456
+DB_NAME=mai_bot_data
+DB_CHARSET=utf8
