--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,10 @@ charset-normalizer==2.0.4
 click==7.1.2
 colorama==0.4.4
 cookiecutter==1.7.3
-fastapi==0.63.0
+fastapi==0.68.0
 h11==0.12.0
-httpcore==0.12.3
-httpx==0.17.1
+httpcore==0.13.0
+httpx==0.18.0
 idna==3.2
 Jinja2==3.0.1
 jinja2-time==0.2.0
@@ -20,8 +20,8 @@ loguru==0.5.3
 MarkupSafe==2.0.1
 multidict==5.1.0
 nb-cli==0.4.2
-nonebot-adapter-cqhttp==2.0.0a13
-nonebot2==2.0.0a13.post1
+nonebot-adapter-cqhttp==2.0.0a16
+nonebot2==2.0.0a16
 Pillow==8.3.1
 poyo==0.5.0
 prompt-toolkit==1.0.14
@@ -39,15 +39,15 @@ requests==2.26.0
 rfc3986==1.5.0
 six==1.16.0
 sniffio==1.2.0
-starlette==0.13.6
+starlette==0.14.2
 text-unidecode==1.3
 tomlkit==0.7.2
 typing-extensions==3.10.0.0
 urllib3==1.26.6
-uvicorn==0.13.4
+uvicorn==0.15.0
 watchgod==0.7
 wcwidth==0.2.5
-websockets==8.1
+websockets==9.1
 win32-setctime==1.0.3
 yarl==1.6.3
 pymysql==1.0.2
